crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__value_with_derive_parse_skips_impl.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(
    #[derive(::csskit_derives::Visitable)] #[visit(skip)] pub enum FooKeywords { Foo :
    "foo", Bar : "bar", }
);
#[derive(Parse)]
enum Foo {
    Foo(::css_parse::T![Ident]),
    Bar(::css_parse::T![Ident]),
}
