crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__value_with_derive_visitable_adds_attributes.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(
    #[derive(::csskit_derives::Visitable)] #[visit(skip)] pub enum FooKeywords { Foo :
    "foo", Bar : "bar", }
);
#[derive(Visitable)]
enum Foo {
    #[visit(skip)]
    Foo(::css_parse::T![Ident]),
    #[visit(skip)]
    Bar(::css_parse::T![Ident]),
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        match p.parse_if_peek::<FooKeywords>()? {
            Some(FooKeywords::Foo(ident)) => {
                return Ok(Self::Foo(ident));
            }
            Some(FooKeywords::Bar(ident)) => {
                return Ok(Self::Bar(ident));
            }
            None => {}
        }
        let c: ::css_parse::Cursor = p.parse::<::css_parse::T![Any]>()?.into();
        Err(::css_parse::diagnostics::UnexpectedIdent(p.parse_str(c).into(), c.into()))?
    }
}
